<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GitHubTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub_activity1">SubActivity1</string>
    <string name="emoticonName">Name</string>
    <string name="emoticonDescription">Description</string>
    <string name="emoticonSequence">Sequence</string>
    <string name="emoticonSave">Save</string>
    <string name="actionSubActivity1">SubActivity1</string>
    <string name="editTextNameHint">Your Name</string>
    <string name="editTextName" />
    <string name="textViewMain">Hello World!</string>
    <string name="buttonTakePicture">Take Picture!</string>
    <string name="contentDescriptionThumbnail">Thumbnail</string>

</resources>
